# ohmylib

./: .dir-locals.el  .gitignore  CMakeLists.txt  memory.hpp  memory.test.cpp  string_view.hpp  string_view.test.cpp  type_traits.hpp  type_traits.test.cpp  utility.hpp
source/: CMakeLists.txt  c++config.hpp  functional.hpp  memory.hpp  string_view.hpp  type_traits.hpp  typeinfo.hpp
